# hsfiddle

./: .gitignore  config.json  db.sql  ghcjsapp.cabal  hsfiddle.cabal
public/css/: main.css
public/html/: index.html
public/js/: ace.min.js  main.js
public/js/ace/: mode-haskell.js
server/: cabal.sandbox.config  credentials.json.example  hsfiddleserver.cabal
server/public/css/: jquery-ui.min.css
server/public/html/: index.html
server/public/js/: main.js
server/src/: AMQP.hs  App.hs  CompilationCache.hs  Compile.hs  Fiddle.hs  Main.hs  PG.hs  ParseCredentials.hs  Pending.hs  Redis.hs  Service.hs  Types.hs  credentials.json.example
server/src/Control/Concurrent/: SafeMVar.hs
server/src/Service/: HSFiddle.hs
server/test/: AppSpec.hs
server/test/Database/Redis/: Mock.hs
server/test/Service/: Mock.hs
server/test/Test/: Types.hs  Util.hs
src/: Compile.hs  Main.hs
worker/: cabal.sandbox.config  worker.cabal
worker/src/: Compile.hs  Config.hs  Main.hs  Semaphore.hs  Util.hs
