name:                hsfiddleserver
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Mark Grant
maintainer:          mark.alan.grant@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hsfiddleserver
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5,
                       text,
                       mtl,
                       scotty,
                       wai-middleware-static,
                       wai-extra,
                       strict,
                       directory,
                       random,
                       process,
                       aeson,
                       amqp,
                       bytestring,
                       containers,
                       uuid
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -with-rtsopts "-N" -fno-warn-unused-do-bind
