name:                hsfiddleserver
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Mark Grant
maintainer:          mark.alan.grant@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hsfiddleserver
  main-is: Main.hs
  build-depends:       base >=4.5,
                       text,
                       mtl,
                       scotty,
                       wai-middleware-static,
                       wai-extra,
                       strict,
                       directory,
                       random,
                       process,
                       aeson,
                       bytestring,
                       containers,
                       uuid,
                       amqp  == 0.6.0,
                       hedis == 0.6.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -with-rtsopts "-N" -fno-warn-unused-do-bind
